# ChangeLog for sys-apps/pcsc-lite
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcsc-lite/ChangeLog,v 1.100 2010/12/31 17:40:21 maekke Exp $

  31 Dec 2010; Markus Meier <maekke@gentoo.org> pcsc-lite-1.6.6.ebuild:
  arm stable, bug #349561

  29 Dec 2010; Thomas Kahle <tomka@gentoo.org> pcsc-lite-1.6.6.ebuild:
  x86 stable per bug 349561

  29 Dec 2010; Jeroen Roovers <jer@gentoo.org> pcsc-lite-1.6.6.ebuild:
  Stable for HPPA PPC (bug #349561).

  29 Dec 2010; Markos Chandras <hwoarang@gentoo.org> pcsc-lite-1.6.6.ebuild:
  Stable on amd64 wrt bug #349561

  26 Dec 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -pcsc-lite-1.5.5.ebuild, -pcsc-lite-1.6.4.ebuild:
  Remove 1.6.4 since 1.6.6 is going stable instead. Remove 1.5.5 even if that
  will make a few minor arch users unable to get a stable-only combination
  between ccid and pcsc-lite (their stable tree was broken already and has been
  for a long time, will be fixed once new pcsc-lite and ccid will go stable
  _together_).

  17 Dec 2010; Diego E. Pettenò <flameeyes@gentoo.org> pcsc-lite-1.6.6.ebuild:
  Block old ccid versions, forcing update to latest.

*pcsc-lite-1.6.6 (12 Dec 2010)

  12 Dec 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -pcsc-lite-1.6.5-r1.ebuild, +pcsc-lite-1.6.6.ebuild:
  Version bump, with 64-bit fixes.

*pcsc-lite-1.6.5-r1 (05 Dec 2010)

  05 Dec 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  files/99-pcscd-hotplug.rules, -pcsc-lite-1.6.5.ebuild,
  +pcsc-lite-1.6.5-r1.ebuild:
  Fix udev rules as per bug #347728.

*pcsc-lite-1.6.5 (04 Dec 2010)

  04 Dec 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +files/99-pcscd-hotplug.rules, +pcsc-lite-1.6.5.ebuild, +files/pcscd-init.3:
  Version bump; since upstream is working around init script craziness over
  Ubuntu and other binary distributions, we apply our own workaround by running
  pcscd as nobody:pcscd and hotplug it via udev. This version also drops HAL