@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/pcsc-lite
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcsc-lite/ChangeLog,v 1.100 2010/12/31 17:40:21 maekke Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcsc-lite/ChangeLog,v 1.101 2011/01/01 15:46:10 armin76 Exp $
+
+  01 Jan 2011; Raúl Porcel <armin76@gentoo.org> pcsc-lite-1.6.6.ebuild:
+  ia64/m68k/s390/sh/sparc stable wrt #349561
 
   31 Dec 2010; Markus Meier <maekke@gentoo.org> pcsc-lite-1.6.6.ebuild:
   arm stable, bug #349561
